Адаптивные картинки в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
                         11</a></li>
             </ul>
             <button type="button" class="menu-open" menu-open>
-                <svg width="40" heigh="40">
+                <svg width="40" height="40">
                     <use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>
             </button>
@@ -128,7 +128,19 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio1.jpg" alt="пример веб-сайта" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio1_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio1_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio1_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio1_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio1_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio1_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio1.jpg" alt="laptop" width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio1.jpg" alt="пример веб-сайта" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту платформу для цифрового
                                     шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -142,7 +154,20 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio2.jpg" alt="два баскетболиста" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio2_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio2_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio2_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio2_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio2_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio2_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio2.jpg" alt="two players in basketball"
+                                        width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio2.jpg" alt="два баскетболиста" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -157,7 +182,19 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio3.jpg" alt="логотип ресторана Сиафуд" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio3_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio3_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio3_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio3_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio3_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio3_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio3.jpg" alt="logo of seafood" width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio3.jpg" alt="логотип ресторана Сиафуд" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -172,7 +209,19 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio4.jpg" alt="Черные наушники" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio4_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio4_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio4_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio4_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio4_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio4_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio4.jpg" alt="headphones" width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio4.jpg" alt="Черные наушники" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -187,7 +236,19 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio5.jpg" alt="2 коробки" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio5_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio5_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio5_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio5_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio5_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio5_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio5.jpg" alt="two boxes" width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio5.jpg" alt="2 коробки" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -202,7 +263,19 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio6.jpg" alt="макет сайта" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio6_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio6_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio6_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio6_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio6_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio6_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio6.jpg" alt="mac computer on the table" width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio6.jpg" alt="макет сайта" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -217,7 +290,19 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio7.jpg" alt="разворот журнала" width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio7_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio7_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio7_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio7_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio7_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio7_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio7.jpg" alt="opened magazine" width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio7.jpg" alt="разворот журнала" width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -232,8 +317,20 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio8.jpg" alt="визитная карточка проекта"
-                                    width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio8_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio8_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio8_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio8_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio8_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio8_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio8.jpg" alt="paper label with rope" width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio8.jpg" alt="визитная карточка проекта"
+                                    width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -248,8 +345,21 @@
                     <li class="portfolio-list__item">
                         <a href="/" class="portfolio-list__link link">
                             <div class="card-overlay">
-                                <img src="./images/portfolio/portfolio9.jpg" alt="ноутбук с презентацией Приложения"
-                                    width="370">
+                                <picture>
+                                    <source
+                                        srcset="./images/portfolio/portfolio9_desktop_370@1x.jpg 1x, ./images/portfolio/portfolio9_desktop_370@2x.jpg 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio9_tablet_354@1x.jpg 1x, ./images/portfolio/portfolio9_tablet_354@2x.jpg 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./images/portfolio/portfolio9_mobile_450@1x.jpg 1x, ./images/portfolio/portfolio9_mobile_450@2x.jpg 2x"
+                                        media="(min-width: 480px)">
+                                    <img src="./images/portfolio/portfolio9.jpg" alt="working on the laptop"
+                                        width="100%">
+                                </picture>
+                                <!-- <img src="./images/portfolio/portfolio9.jpg" alt="ноутбук с презентацией Приложения"
+                                    width="370"> -->
                                 <p class="card-overlay__text">Технокряк это современная площадка распространения
                                     коронавируса. Компании используют эту
                                     платформу для цифрового
