--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         11
                         11</a></li>
             </ul>
-            <button type="button" class="menu-open btn" menu-open>
-                <svg width="40" height="40">
+            <button type="button" class="menu-open" menu-open>
+                <svg class="mob-menu__icon-open" width="40" height="40">
                     <use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>
             </button>
@@ -62,7 +62,7 @@
                     </svg></button>
                 <nav>
                     <ul class="mobile-menu list">
-                        <li class="mobile-menu__item"><a class="mobile-menu__link link current-link"
+                        <li class="mobile-menu__item"><a class="mobile-menu__link link mobile-menu__current-link"
                                 href="./index.html">Студия</a>
                         </li>
                         <li class="mobile-menu__item"><a class="mobile-menu__link link"
