--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                 <ul class="header-navigation__list list">
                     <li class="header-navigation__item"><a class="header-navigation__link link"
                             href="./index.html">Студия</a></li>
-                    <li class="header-navigation__item"><a class="header-navigation__link link current-link current"
+                    <li class="header-navigation__item"><a class="header-navigation__link link current-link"
                             href="./portfolio.html">Портфолио</a></li>
                     <li class="header-navigation__item"><a class="header-navigation__link link"
                             href="Контакты">Контакты</a>
@@ -63,10 +63,10 @@
                     </svg></button>
                 <nav>
                     <ul class="mobile-menu list">
-                        <li class="mobile-menu__item"><a class="mobile-menu__link link current-link"
+                        <li class="mobile-menu__item"><a class="mobile-menu__link link"
                                 href="./index.html">Студия</a>
                         </li>
-                        <li class="mobile-menu__item"><a class="mobile-menu__link link"
+                        <li class="mobile-menu__item"><a class="mobile-menu__link link mobile-menu__current-link"
                                 href="./portfolio.html">Портфолио</a></li>
                         <li class="mobile-menu__item"><a class="mobile-menu__link link" href="Контакты">Контакты</a>
                         </li>
