Исправил индекс после проверки

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 </ul>
             </nav>
             <ul class="header-contact__list list">
-                <li class="header-contact__item"><a class="header-contact__link link" href="mailto:info@devstudio.com">
+                <li class="header-contact__item"><a class="header-contact__link link contact__link-top" href="mailto:info@devstudio.com">
                         <svg class="header-contact__icon" width="16" height="12">
                             <use href="./images/symbol-defs.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a></li>
-                <li class="header-contact__item"><a class="header-contact__link link" href="tel:+380961111111">
+                <li class="header-contact__item"><a class="header-contact__link link contact__link-bottom" href="tel:+380961111111">
                         <svg class="header-contact__icon" width="10" height="16">
                             <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                         </svg>+38 096
@@ -46,7 +46,7 @@
                         11
                         11</a></li>
             </ul>
-            <button type="button" class="menu-open" menu-open>
+            <button type="button" class="menu-open">
                 <svg class="mob-menu__icon-open" width="40" height="40">
                     <use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>
@@ -54,9 +54,9 @@
         </div>
 
         <!-- Мобильное меню -->
-        <div class="mobile-nav is-hidden" mobile-nav>
+        <div class="mobile-nav is-hidden is-open">
             <div class="container">
-                <button type="button" class="menu-close" menu-close>
+                <button type="button" class="menu-close">
                     <svg class="mob-menu__icon-close">
                         <use href="./images/symbol-defs.svg#icon-close"></use>
                     </svg></button>
@@ -213,7 +213,7 @@
                                             media="(min-width: 768px)">
                                         <source srcset="./images/team/igor_mobile_450@1x.jpg 1x, ./images/team/igor_mobile_450@2x.jpg 2x"
                                             media="(min-width: 480px)">
-                                        <img src="./images/team/ihor.jpg" alt="Игорь Демьяненко" width="100%">
+                                        <img src="./images/team/ihor.jpg" alt="Игорь Демьяненко">
                                     </picture>
                         <!-- <img src="./images/img4.jpg" alt="Мужчина в очкаъ и с бородой" width="270"> -->
                         <div class="team-block">
@@ -260,7 +260,7 @@
                                             media="(min-width: 768px)">
                                         <source srcset="./images/team/olha_mobile_450@1x.jpg 1x, ./images/team/olha_mobile_450@2x.jpg 2x"
                                             media="(min-width: 480px)">
-                                        <img src="./images/team/olha.jpg" alt="Ольга Репина" width="100%">
+                                        <img src="./images/team/olha.jpg" alt="Ольга Репина">
                                     </picture>
                         <!-- <img src="./images/img5.jpg" alt="Девушка, блондинка в очках" width="270"> -->
                         <div class="team-block">
@@ -306,7 +306,7 @@
                                             media="(min-width: 768px)">
                                         <source srcset="./images/team/nikolay_mobile_450@1x.jpg 1x, ./images/team/nikolay_mobile_450@2x.jpg 2x"
                                             media="(min-width: 480px)">
-                                        <img src="./images/team/nikolay.jpg" alt="Николай Тарасов" width="100%">
+                                        <img src="./images/team/nikolay.jpg" alt="Николай Тарасов">
                                     </picture>
                         <!-- <img src="./images/img6.jpg" alt="Мужчина с рыжей бородой" width="270"> -->
                         <div class="team-block">
@@ -352,7 +352,7 @@
                                             media="(min-width: 768px)">
                                         <source srcset="./images/team/michael_mobile_450@1x.jpg 1x, ./images/team/michael_mobile_450@2x.jpg 2x"
                                             media="(min-width: 480px)">
-                                        <img src="./images/team/michael.jpg" alt="Михаил Ермаков" width="100%">
+                                        <img src="./images/team/michael.jpg" alt="Михаил Ермаков">
                                     </picture>
                         <!-- <img src="./images/img7.jpg" alt="Мужчина, брюнет в очках" width="270"> -->
                         <div class="team-block">
