Исправил хэдер в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                         11
                         11</a></li>
             </ul>
-            <button type="button" class="menu-open" menu-open>
+            <button type="button" class="menu-open">
                 <svg width="40" height="40">
                     <use href="./images/symbol-defs.svg#icon-menu"></use>
                 </svg>
@@ -55,9 +55,9 @@
         </div>
 
         <!-- Мобильное меню -->
-        <div class="mobile-nav is-hidden" mobile-nav>
+        <div class="mobile-nav is-hidden">
             <div class="container">
-                <button type="button" class="menu-close" menu-close>
+                <button type="button" class="menu-close">
                     <svg class="mob-menu__icon-close">
                         <use href="./images/symbol-defs.svg#icon-close"></use>
                     </svg></button>
